02-deployment.yaml
# The API version for Deployments
apiVersion: apps/v1

# A Deployment manages a set of identical pods (the actual running containers)
kind: Deployment

metadata:
  # The name of our deployment
  name: myapp

spec:
  # We want exactly 1 copy of our application running at all times
  replicas: 1
  
  selector:
    matchLabels:
      # This tells the deployment how to find the pods it is managing
      app: myapp
      
  template:
    metadata:
      labels:
        # Every pod created by this deployment will have this label attached
        app: myapp
    spec:
      nodeSelector:
        # We explicitly force this pod to run on an 'amd64' architecture node in AWS EKS
        kubernetes.io/arch: amd64
        
      containers:
        # The name of the container running inside the pod
        - name: myapp
          # The exact Docker image to pull from your Docker Hub repository
          image: ahmedwsiim/myapp:1.0
          
          ports:
            # The port that our Python Flask app is listening on inside the container
            - containerPort: 5000
            
          volumeMounts:
            # The path inside the container where the EBS storage will be permanently mounted
            - mountPath: "/app/data"
              # The name of the volume reference (defined below)
              name: myapp-storage
              
          resources:
            requests:
              # We guarantee the container gets at least 50 millicores of CPU
              cpu: "50m"
              # We guarantee the container gets at least 64 Megabytes of RAM
              memory: "64Mi"
              
      volumes:
        # We define a volume named 'myapp-storage'
        - name: myapp-storage
          persistentVolumeClaim:
            # This links the volume directly to the 2GB PVC we created in 01-pvc.yaml
            claimName: myapp-pvc
