05-ingress.yaml
# The API version for Kubernetes Networking
apiVersion: networking.k8s.io/v1

# An Ingress is a set of routing rules that map outside internet traffic to our internal services
kind: Ingress

metadata:
  # The name of our routing rules
  name: myapp-ingress
  annotations:
    # This tells Cert-Manager to automatically generate an SSL cert using our ClusterIssuer
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
    # Allows unlimited file upload sizes through the NGINX proxy (prevents 413 Payload Too Large)
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # Wait up to 600 seconds for the Python app to respond before throwing a 504 Gateway Timeout
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # Wait up to 600 seconds when sending data to the Python app before timing out
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

spec:
  # This tells Kubernetes to specifically use the NGINX controller to process these rules
  ingressClassName: nginx
  
  tls:
    # This entire section enables HTTPS/SSL
    - hosts:
        # The domain name we are securing
        - thechamp.app
      # The Kubernetes secret where the automatically generated SSL certificate will be saved
      secretName: thechamp-tls
      
  rules:
    # We only want to apply these rules to traffic hitting exactly 'thechamp.app'
    - host: thechamp.app
      http:
        paths:
          # Match all traffic hitting the root path (/)
          - path: /
            # Prefix means it matches / and anything after it like /users or /login
            pathType: Prefix
            backend:
              service:
                # Route the matched traffic to our internal 'myapp-svc' service
                name: myapp-svc
                port:
                  # Route it to port 80 of the service
                  number: 80
