08-dummy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-deployment
  labels:
    app: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      labels:
        app: dummy
    spec:
      containers:
      - name: dummy-container
        # We'll just use a tiny web server image that echos requests for testing
        image: traefik/whoami:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dummy-svc
spec:
  selector:
    app: dummy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-dummy-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /dummy

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dummy-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`thechamp.app`) && PathPrefix(`/dummy`)
      kind: Rule
      middlewares:
        - name: strip-dummy-prefix
      services:
        - name: dummy-svc
          port: 80
